z-index fix

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -78,7 +78,7 @@
 @media screen and (max-width: 870px) {
   .header {
     position: fixed;
-    z-index: 1000;
+    z-index: 9;
     left: 0;
     right: 0;
     top: 0;
